SET(ARGCV_STRING_VERSION 1.0)
SET(ARGCV_STRING_SOVERSION 0.1)

AUX_SOURCE_DIRECTORY(. LIBARGCV_STRING_SRC)
ADD_LIBRARY(argcv_string SHARED ${LIBARGCV_STRING_SRC})
SET_TARGET_PROPERTIES(argcv_string PROPERTIES VERSION ${ARGCV_STRING_VERSION} SOVERSION ${ARGCV_STRING_SOVERSION})

ADD_LIBRARY(argcv_string_static STATIC ${LIBARGCV_STRING_SRC})
SET_TARGET_PROPERTIES(argcv_string_static PROPERTIES OUTPUT_NAME "argcv_string")





