SET(ARGCV_IR_INDEX_VERSION 1.0)
SET(ARGCV_IR_INDEX_SOVERSION 0.1)

AUX_SOURCE_DIRECTORY(. LIBARGCV_IR_INDEX_SRC)
ADD_LIBRARY(argcv_ir_index SHARED ${LIBARGCV_IR_INDEX_SRC})
SET_TARGET_PROPERTIES(argcv_ir_index PROPERTIES VERSION ${ARGCV_IR_INDEX_VERSION} SOVERSION ${ARGCV_IR_INDEX_SOVERSION})

ADD_LIBRARY(argcv_ir_index_static STATIC ${LIBARGCV_IR_INDEX_SRC})
SET_TARGET_PROPERTIES(argcv_ir_index_static PROPERTIES OUTPUT_NAME "argcv_ir_index")


TARGET_LINK_LIBRARIES(argcv_ir_index argcv_wrapper_leveldb)

TARGET_LINK_LIBRARIES(argcv_ir_index_static argcv_wrapper_leveldb_static)


