SET(ARGCV_WRAPPER_CURL_VERSION 1.0)
SET(ARGCV_WRAPPER_CURL_SOVERSION 0.1)

AUX_SOURCE_DIRECTORY(. LIBARGCV_WRAPPER_CURL_SRC)
ADD_LIBRARY(argcv_wrapper_curl SHARED ${LIBARGCV_WRAPPER_CURL_SRC})
SET_TARGET_PROPERTIES(argcv_wrapper_curl PROPERTIES VERSION ${ARGCV_WRAPPER_CURL_VERSION} SOVERSION ${ARGCV_WRAPPER_CURL_SOVERSION})

ADD_LIBRARY(argcv_wrapper_curl_static STATIC ${LIBARGCV_WRAPPER_CURL_SRC})
SET_TARGET_PROPERTIES(argcv_wrapper_curl_static PROPERTIES OUTPUT_NAME "argcv_wrapper_curl")


TARGET_LINK_LIBRARIES(argcv_wrapper_curl curl)
TARGET_LINK_LIBRARIES(argcv_wrapper_curl ssl)
TARGET_LINK_LIBRARIES(argcv_wrapper_curl crypto)


TARGET_LINK_LIBRARIES(argcv_wrapper_curl_static curl)
TARGET_LINK_LIBRARIES(argcv_wrapper_curl_static ssl)
TARGET_LINK_LIBRARIES(argcv_wrapper_curl_static crypto)

