SET(ARGCV_WRAPPER_INI_VERSION 1.0)
SET(ARGCV_WRAPPER_INI_SOVERSION 0.1)

AUX_SOURCE_DIRECTORY(. LIBARGCV_WRAPPER_INI_SRC)
ADD_LIBRARY(argcv_wrapper_ini SHARED ${LIBARGCV_WRAPPER_INI_SRC})
SET_TARGET_PROPERTIES(argcv_wrapper_ini PROPERTIES VERSION ${ARGCV_WRAPPER_INI_VERSION} SOVERSION ${ARGCV_WRAPPER_INI_SOVERSION})

ADD_LIBRARY(argcv_wrapper_ini_static STATIC ${LIBARGCV_WRAPPER_INI_SRC})
SET_TARGET_PROPERTIES(argcv_wrapper_ini_static PROPERTIES OUTPUT_NAME "argcv_wrapper_ini")


ADD_DEPENDENCIES(argcv_wrapper_ini leveldb_proj)

TARGET_LINK_LIBRARIES(argcv_wrapper_ini leveldb)

ADD_DEPENDENCIES(argcv_wrapper_ini_static leveldb_proj)

TARGET_LINK_LIBRARIES(argcv_wrapper_ini_static leveldb_static)

